public/stylesheets/beta.css
/* ... */
button {
  font-family: SVN-Karla;
  font-size: 18px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  color: #ffffff;
  border-radius: 100px;
  background-color: #3ebbed;
  border: none;
  padding: 6px 21px 5px;
}

#sidenav-overlay {
  opacity: 0 !important;
}

#side-menu {
  visibility: visible;
  width: 107px;
  overflow: hidden;
  left: 0;
  box-shadow: none;
  z-index: 1;
  margin-left: 45px;
  float: left;
  padding-bottom: 0;
  background: transparent;
}

#side-menu a, #slide-out .slide-bottom a {
  padding: 0;
  line-height: 0;
  height: auto;
}

#side-menu .top-menu a {
  margin-top: 36px; 
}

#slide-out .slide-menu-wrapper, #slide-cart .slide-menu-wrapper {
  position: relative;
  height: calc(100% - 49px);
}

#side-menu .bottom-menu, #slide-out .bottom-menu {
  position: absolute;
  bottom: 0;
  transform: translateY(0px);
  -moz-transform: translateY(0px);
  -webkit-transform: translateY(-70px);
}

#slide-out {
  overflow-y: scroll;
}

#slide-out .slide-bottom {
  background-color: #f3faff;
  margin-top: 50px;
}

#slide-out .slide-bottom a {
  display: inline;
  margin-right: 8px;
}

#slide-out .slide-bottom .search {
  padding-left: 19px;
  background: white;
}

#slide-out .slide-bottom .search .svg-search {
  width: 20px;
}

#slide-out .slide-bottom .search .svg-search path {
  stroke: #b3c2cf;
}

#slide-out .slide-bottom .search input {
  margin: 0;
  border: none;
  font-family: SVN-Karla;
  font-size: 13px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #b3c2cf;
  box-shadow: none;
  width: calc(100% - 39px);
}

#slide-out .slide-bottom .sns {
  margin-top: 9px;
  padding-left: 19px;
}

#slide-out .slide-bottom .fb-like {
  width: 100%;
  text-align: center;
  padding-left: 19px;
}

#side-menu .bottom-menu a {
  margin-top: 9px; 
}

#slide-out, #slide-out .collapsible-body, #slide-cart, #slide-cart .collapsible-body {
  background-color: #f3faff;
  box-shadow: none;
}




/*#slide-out .collapsible-wrapper {
  display: inline;
  width: 100%;
}

#slide-out .main-collapsible {
  overflow-y: scroll;
  overflow-x: hidden;
  height: 100%;
}*/

#slide-out a.side-header, #slide-out.central a.side-header {
  font-family: Estilo;
  font-size: 35px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  text-align: center;
  color: #3ebbed;
  text-transform: lowercase;
  line-height: inherit;
  height: inherit;
}

#slide-out .collapsible-header {
  font-family: SVN-Karla;
  font-size: 15px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  text-align: left;
  color: #4a8dcc;
  text-transform: uppercase;
  height: auto;
  line-height: 21px;
}

#slide-out .sub-header {
  margin: 0 0 0 3rem;
}

#slide-out .collapsible-body li.active {
  background-color: #ddd;
}

#slide-out .collapsible-body .title {
  font-family: SVN-Karla;
  font-size: 15px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #b3c2cf;
  height: auto;
  line-height: 21px;
  padding: 0 10px;
  margin: 0 1rem 0 2rem;
  text-decoration: underline;
}

#slide-out .collapsible-body .title:hover {
  background-color: none;
}

#slide-out .collapsible-body .category {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #b3c2cf;
  height: auto;
  line-height: 21px;
  margin: 0 0 0 3rem;  
}

#slide-out .collapsible-body .category:hover {
  background-color: none;
  color: #4a8dcc; 
}

#slide-out.north a.side-header {
  color: #7cd8ca;
}

#slide-out.south a.side-header {
  color: #fea3a3;
}

#slide-cart h3 {
  font-family: Estilo;
  font-size: 35px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  text-align: center;
  color: #3ebbed;
  margin-top: 103px;
  text-transform: lowercase;
}

#slide-cart .cart-product {
  display: inline-block;
}

#slide-cart .cart-product img {
  width: 100%;
}

#slide-cart .cart-product .product-name a {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  color: #5aa0d6;
  padding: 0;
  height: auto;
  line-height: 1;
}

#slide-cart .cart-product .product-brand {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  color: #b3c2cf;
}

#slide-cart .cart-product .product-price {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  text-align: left;
  color: #fea3a3;
}

.pre-order {
  font-family: SVN-Karla;
  font-size: 16px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  text-align: left;
  color: #fea3a3;
}

#slide-cart .pre-order {
  font-size: 14px;
}

.cart-product .cart-remove {
  color: #5aa0d6;
  cursor: pointer;  
}

#slide-cart .row {
  padding: 0 27px;
}

#slide-cart .cart-btn {
  font-family: SVN-Karla;
  font-size: 18px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  text-align: left;
  color: #ffffff;
  width: 100%;
  border-radius: 23px;
  background-color: #3ebbed;
  text-align: center;
  line-height: 1;
  height: auto;
  padding: 10px 0 9px;
  margin-top: 200px;
}

header, main {
  padding-left: 152px;
}

/* Top Nav */
.top-nav {
  margin: 10px 0;
}
.db-logo {
  height: 70px;
  width: auto;
}
.slogan {
  font-size: 1em;
}
.clock {
  display: inline-block;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  height: 70px;
  width: 360px;
  border: 5px solid #fff;
  line-height: 70px;
  vertical-align: middle;
  font-family: '256bytes',sans-serif;
  font-size: 3em;
  color: #fff;
}
.btn-profile {
  display: inline-block;
  height: 70px;
  width: 70px;
  background-color: transparent;
  border: 5px solid #fff;
}
.profile-box {
  line-height: 85px;
  vertical-align: middle;
  text-align: center;
}
.dropdown-content {
  right: 0 !important;
}
/* ... */

